<resources>
    <string name="app_name">Invitation1.0</string>
    <string name="muslim">Muslim???</string>
    <string name="tunaikan">Mari sambut hari kemenangan</string>
    <string name="dengan">Dengan . . .</string>
    <string name="takbiran">Takbiran KUY</string>
    <string name="yxgk">Y x G Kuy</string>
    <string name="kuy">KUY</string>
    <string name="nope">Nope</string>
    <string name="malam">Malam Takbir di Masjid Besar HMTE UNPAD</string>
    <string name="back">Back</string>
</resources>
