<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dendihfuadi.invitation10.Main2Activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/muslim"
            android:background="@color/aqua"
            android:textSize="44sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView"
            android:background="@color/yellow"
            android:text="@string/tunaikan"
            android:textSize="20sp"
            android:id="@+id/textView2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView2"
            android:background="@color/maroon"
            android:text="@string/dengan"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:id="@+id/textView3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView3"
            android:background="@color/abu"
            android:text="@string/takbiran"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:id="@+id/textView4" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView4"
            android:background="@color/kuy"
            android:text="@string/yxgk"
            android:textSize="35sp"
            android:id="@+id/textView5" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textView5"
            android:layout_marginEnd="47dp"
            android:layout_marginRight="47dp"
            android:layout_marginTop="84dp"
            android:text="@string/kuy"
            android:id="@+id/button1"
            android:background="@color/aqua"
            android:textSize="14sp"/>

        <Button
            android:textSize="14sp"
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView"
            android:layout_alignLeft="@+id/button1"
            android:layout_alignStart="@+id/button1"
            android:layout_marginBottom="27dp"
            android:background="@color/maroon"
            android:text="@string/nope" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:src="@drawable/bedug"
            android:id="@+id/imageView" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
